# QuantizationAggregator

./: README.md  pyproject.toml
experiments/: Scratch Qreg.ipynb  Visualizations of clf.ipynb  evalgaqreg.py  evalqreg.py  evaluation.ipynb  logreg_vs_baseline.py  runner.py  scratch_mip.py
experiments/.ipynb_checkpoints/: logreg_vs_baseline-checkpoint.py
experiments/util/: __init__.py  resulthandler.py
results/: results_42900.csv  results_43979.csv
skqreg/estimators/: __init__.py  ga_qagg.py  qagg.py
